--- a/public/webfonts/iconfont.css
+++ b/public/webfonts/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4996354 */
-  src: url('iconfont.woff2?t=1754895380058') format('woff2'),
-       url('iconfont.woff?t=1754895380058') format('woff'),
-       url('iconfont.ttf?t=1754895380058') format('truetype');
+  src: url('iconfont.woff2?t=1754896052555') format('woff2'),
+       url('iconfont.woff?t=1754896052555') format('woff'),
+       url('iconfont.ttf?t=1754896052555') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-sousuo:before {
+  content: "\e606";
+}
+
+.icon-HOMEMESSAGE:before {
+  content: "\e7eb";
+}
+
+.icon-about:before {
+  content: "\e68a";
 }
 
 .icon-music:before {
